--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
 
   <div class="app">
-    <h1>Obs & Gynae 200</h1>
+    <h1>Patho 200</h1>
 
     <div class="quiz">
       <h2 id="question">Question goes here</h2>
